Change menu names

--- a/main/index.html
+++ b/main/index.html
@@ -114,13 +114,13 @@
             </li>
             <!-- 👇 link -->
             <li class="mega-nav__item">
-              <a href="#0" class="mega-nav__control">Link</a>
+              <a href="#0" class="mega-nav__control">Mangas</a>
             </li>
             <li class="mega-nav__item">
-              <a href="#0" class="mega-nav__control">Link2</a>
+              <a href="#0" class="mega-nav__control">Movies</a>
             </li>
             <li class="mega-nav__item">
-              <a href="#0" class="mega-nav__control">Link3</a>
+              <a href="#0" class="mega-nav__control">Contact Us</a>
             </li>
           </ul>
   
