Main listing addition

--- a/main/index.html
+++ b/main/index.html
@@ -68,7 +68,7 @@
             <!-- 👇 layout 2 -> multiple lists -->
             <li class="mega-nav__item js-mega-nav__item">
               <button class="reset mega-nav__control js-mega-nav__control js-tab-focus">
-                Browse
+                Tags
                 <i class="mega-nav__arrow-icon" aria-hidden="true">
                   <svg class="icon" viewBox="0 0 16 16">
                     <g class="icon__group" fill="none" stroke="currentColor" stroke-linecap="square" stroke-miterlimit="10" stroke-width="2">
@@ -88,6 +88,8 @@
                     <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Dresses</a></li>
                     <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Jackets</a></li>
                     <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Jeans</a></li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Jackets</a></li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Jeans</a></li>
                   </ul>
 
                   <ul class="mega-nav__sub-items">
@@ -98,10 +100,20 @@
                     <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Boots</a></li>
                     <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Ankle Boots</a></li>
                   </ul>
+
+                  <ul class="mega-nav__sub-items">
+                    <li class="mega-nav__label">Jackets</li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">All Shoes</a></li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Trainers</a></li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Heels</a></li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Boots</a></li>
+                    <li class="mega-nav__sub-item"><a href="#0" class="mega-nav__sub-link">Ankle Boots</a></li>
+                  </ul>
+
                   <div class="mega-nav__card width-100% max-width-xs margin-x-auto">
                     <a href="#0" class="block radius-lg overflow-hidden">
                       <figure class="media-wrapper media-wrapper--4:3">
-                        <img class="block width-100%" src="../../../app/assets/img/mega-site-nav-img-1.jpg" alt="Image description">
+                        <img class="block width-100%" src="../../assets/img/mega-site-nav-img-1.jpg" alt="Image description">
                       </figure>
                     </a>
   
@@ -118,6 +130,15 @@
             </li>
             <li class="mega-nav__item">
               <a href="#0" class="mega-nav__control">Movies</a>
+            </li>
+            <li class="mega-nav__item">
+              <a href="#0" class="mega-nav__control">Comix</a>
+            </li>
+            <li class="mega-nav__item">
+              <a href="#0" class="mega-nav__control">Images</a>
+            </li>
+            <li class="mega-nav__item">
+              <a href="#0" class="mega-nav__control">Games</a>
             </li>
             <li class="mega-nav__item">
               <a href="#0" class="mega-nav__control">Contact Us</a>
@@ -190,4 +211,51 @@
 
 <script src="assets/js/scripts.js"></script>
 </body>
+
+<section class="listing-main">
+  <div class="container max-width-adaptive-lg">
+    <div class="grid gap-sm">
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-1.jpg" alt="photo of James Powell">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Emily Ewing</div>
+            <div class="card-v2__label">Developer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-3.jpg" alt="photo of Mathew Burford">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Mathew Burford</div>
+            <div class="card-v2__label">SVP of marketing</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-4.jpg" alt="photo of Olivia Gribben">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Olivia Gribben</div>
+            <div class="card-v2__label">CEO</div>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+  </div>
+</section>
+
 </html>
