Changed grid paddings

--- a/main/index.html
+++ b/main/index.html
@@ -162,8 +162,8 @@
   
                   <ul class="dropdown__menu" aria-label="submenu">
                     <li><a href="#0" class="dropdown__item">Profile</a></li>
-                    <li><a href="#0" class="dropdown__item">Notifications</a></li>
-                    <li><a href="#0" class="dropdown__item">Messages</a></li>
+                    <li><a href="#0" class="dropdown__item">Upload</a></li>
+                    <li><a href="#0" class="dropdown__item">Scrape</a></li>
                     <li class="dropdown__separator" role="separator"></li>
                     <li><a href="#0" class="dropdown__item">Account Settings</a></li>
                     <li><a href="#0" class="dropdown__item">Log out</a></li>
@@ -214,7 +214,7 @@
 
 <section class="listing-main">
   <div class="container max-width-adaptive-lg">
-    <div class="grid gap-sm">
+    <div class="grid gap-xl">
       <div class="card-v2 col-3@md">
         <figure>
           <img src="../../assets/img/team-img-1.jpg" alt="photo of James Powell">
