Change 12 column to 15

--- a/main/index.html
+++ b/main/index.html
@@ -214,7 +214,7 @@
 
 <section class="listing-main">
   <div class="container max-width-adaptive-lg">
-    <div class="grid gap-xl">
+    <div class="grid gap-lg">
       <div class="card-v2 col-3@md">
         <figure>
           <img src="../../assets/img/team-img-1.jpg" alt="photo of James Powell">
@@ -237,10 +237,30 @@
 
       <div class="card-v2 col-3@md">
         <figure>
+          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Emily Ewing</div>
+            <div class="card-v2__label">Developer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
           <img src="../../assets/img/team-img-3.jpg" alt="photo of Mathew Burford">
           <figcaption class="card-v2__caption text-center">
             <div class="card-v2__title">Mathew Burford</div>
             <div class="card-v2__label">SVP of marketing</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Emily Ewing</div>
+            <div class="card-v2__label">Developer</div>
           </figcaption>
         </figure>
       </div>
