Justified Content Grid

--- a/main/mangas.html
+++ b/main/mangas.html
@@ -18,7 +18,7 @@
 </head><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
 <body>
-  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav hide-nav js-hide-nav js-hide-nav--main">
+  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav">
     <div class="mega-nav__container">
       <!-- 👇 logo -->
       <a href="#0" class="mega-nav__logo">
@@ -184,7 +184,7 @@
   
             <!-- 👇 button -->
             <li class="mega-nav__item">
-              <a href="register.html" class="btn btn--primary mega-nav__btn">Register</a>
+              <a href="#0" class="btn btn--primary mega-nav__btn">Register</a>
             </li>
           </ul>
         </div>
@@ -211,44 +211,71 @@
 
 <script src="assets/js/scripts.js"></script>
 </body>
-<div class="container-justified-gal">
-  <div class="flexbin flexbin-margin">
-    <a href="#">
-      <img src="../../assets/img/team-img-1.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-2.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-3.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-4.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-5.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-6.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-7.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-8.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-9.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-10.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-11.jpg" />
-    </a>
+
+<section class="listing-main">
+  <div class="container max-width-adaptive-lg">
+    <div class="grid gap-lg">
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-1.jpg" alt="photo of James Powell">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Emily Ewing</div>
+            <div class="card-v2__label">Developer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Emily Ewing</div>
+            <div class="card-v2__label">Developer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-3.jpg" alt="photo of Mathew Burford">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Mathew Burford</div>
+            <div class="card-v2__label">SVP of marketing</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Emily Ewing</div>
+            <div class="card-v2__label">Developer</div>
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="card-v2 col-3@md">
+        <figure>
+          <img src="../../assets/img/team-img-4.jpg" alt="photo of Olivia Gribben">
+          <figcaption class="card-v2__caption text-center">
+            <div class="card-v2__title">Olivia Gribben</div>
+            <div class="card-v2__label">CEO</div>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
   </div>
-</div>
-
-
+</section>
 
 </html>
