--- a/main/register.html
+++ b/main/register.html
@@ -18,7 +18,7 @@
 </head><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
 <body>
-  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav hide-nav js-hide-nav js-hide-nav--main">
+  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav">
     <div class="mega-nav__container">
       <!-- 👇 logo -->
       <a href="#0" class="mega-nav__logo">
@@ -184,7 +184,7 @@
   
             <!-- 👇 button -->
             <li class="mega-nav__item">
-              <a href="register.html" class="btn btn--primary mega-nav__btn">Register</a>
+              <a href="#0" class="btn btn--primary mega-nav__btn">Register</a>
             </li>
           </ul>
         </div>
@@ -211,44 +211,73 @@
 
 <script src="assets/js/scripts.js"></script>
 </body>
-<div class="container-justified-gal">
-  <div class="flexbin flexbin-margin">
-    <a href="#">
-      <img src="../../assets/img/team-img-1.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-2.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-3.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-4.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-5.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-6.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-7.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-8.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-9.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-10.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-11.jpg" />
-    </a>
+
+<form class="sign-up-form">
+  <div class="text-component text-center margin-bottom-sm">
+    <h1>Get started</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>
+    Already have an account? <a href="#0">Login</a></p>
   </div>
-</div>
 
+  <div class="grid gap-xs">
+    <div class="col-6@xs">
+      <button class="btn btn--subtle width-100%">
+        <svg aria-hidden="true" class="icon margin-right-xxxs" viewBox="0 0 16 16"><g><path d="M16,3c-0.6,0.3-1.2,0.4-1.9,0.5c0.7-0.4,1.2-1,1.4-1.8c-0.6,0.4-1.3,0.6-2.1,0.8c-0.6-0.6-1.5-1-2.4-1 C9.3,1.5,7.8,3,7.8,4.8c0,0.3,0,0.5,0.1,0.7C5.2,5.4,2.7,4.1,1.1,2.1c-0.3,0.5-0.4,1-0.4,1.7c0,1.1,0.6,2.1,1.5,2.7 c-0.5,0-1-0.2-1.5-0.4c0,0,0,0,0,0c0,1.6,1.1,2.9,2.6,3.2C3,9.4,2.7,9.4,2.4,9.4c-0.2,0-0.4,0-0.6-0.1c0.4,1.3,1.6,2.3,3.1,2.3 c-1.1,0.9-2.5,1.4-4.1,1.4c-0.3,0-0.5,0-0.8,0c1.5,0.9,3.2,1.5,5,1.5c6,0,9.3-5,9.3-9.3c0-0.1,0-0.3,0-0.4C15,4.3,15.6,3.7,16,3z"></path></g></svg>
+        <span>Join using Twitter</span>
+      </button>
+    </div>
+    
+    <div class="col-6@xs">
+      <button class="btn btn--subtle width-100%">
+        <svg aria-hidden="true" class="icon margin-right-xxxs" viewBox="0 0 16 16"><g><path d="M15.3,0H0.7C0.3,0,0,0.3,0,0.7v14.7C0,15.7,0.3,16,0.7,16H8v-5H6V8h2V6c0-2.1,1.2-3,3-3 c0.9,0,1.8,0,2,0v3h-1c-0.6,0-1,0.4-1,1v1h2.6L13,11h-2v5h4.3c0.4,0,0.7-0.3,0.7-0.7V0.7C16,0.3,15.7,0,15.3,0z"></path></g></svg>
+        <span>Join using Facebook</span>
+      </button>
+    </div>
+  </div>
 
+  <p class="text-center margin-y-sm">or</p>
+
+  <div class="margin-bottom-sm">
+    <div class="grid gap-xs">
+      <div class="col-6@md">
+        <label class="form-label margin-bottom-xxxs" for="inputFirstName">First name</label>
+        <input class="form-control width-100%" type="text" name="inputFirstName" id="inputFirstName">
+      </div>
+
+      <div class="col-6@md">
+        <label class="form-label margin-bottom-xxxs" for="inputLastName">Last name</label>
+        <input class="form-control width-100%" type="text" name="inputLastName" id="inputLastName">
+      </div>
+    </div>
+  </div>
+
+  <div class="margin-bottom-sm">
+    <label class="form-label margin-bottom-xxxs" for="inputEmail1">Email</label>
+    <input class="form-control width-100%" type="email" name="inputEmail1" id="inputEmail1" placeholder="email@myemail.com">
+  </div>
+
+  <div class="margin-bottom-md">
+    <label class="form-label margin-bottom-xxxs" for="inputPassword1">Password</label> 
+    <input class="form-control width-100%" type="password" name="inputPassword1" id="inputPassword1">
+    <p class="text-xs color-contrast-medium margin-top-xxs">Minimum 6 characters</p>
+  </div>
+
+  <div class="margin-bottom-md">
+    <div class="checkbox-list">
+      <div>
+        <input class="checkbox" type="checkbox" id="checkNewsletter">
+        <label for="checkNewsletter">Send me updates about {productName}</label>
+      </div>
+    </div>
+  </div>
+
+  <div class="margin-bottom-sm">
+    <button class="btn btn--primary btn--md width-100%">Join</button>
+  </div>
+
+  <div class="text-center">
+    <p class="text-xs color-contrast-medium">By joining, you agree to our <a href="#0">Terms</a> and <a href="#0">Privacy Policy</a>.</p>
+  </div>
+</form>
 
 </html>
