--- a/main/register.html
+++ b/main/register.html
@@ -211,7 +211,7 @@
 
 <script src="assets/js/scripts.js"></script>
 </body>
-
+<div class="container max-width-adaptive-lg">
 <form class="sign-up-form">
   <div class="text-component text-center margin-bottom-sm">
     <h1>Get started</h1>
@@ -279,5 +279,5 @@
     <p class="text-xs color-contrast-medium">By joining, you agree to our <a href="#0">Terms</a> and <a href="#0">Privacy Policy</a>.</p>
   </div>
 </form>
-
+</div>
 </html>
