--- a/main/movies.html
+++ b/main/movies.html
@@ -214,7 +214,7 @@
 
 <section class="listing-main">
   <div class="container max-width-adaptive-lg">
-    <div class="grid gap-lg">
+    <div class="grid gap-md">
       <div class="card-v2 col-3@md">
         <figure>
           <img src="../../assets/img/team-img-5.jpg" alt="photo of James Powell">
@@ -227,50 +227,50 @@
 
       <div class="card-v2 col-3@md">
         <figure>
-          <img src="../../assets/img/team-img-5.jpg" alt="photo of Emily Ewing">
+          <img src="../../assets/img/team-img-5.jpg" alt="photo of James Powell">
           <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
           </figcaption>
         </figure>
       </div>
 
       <div class="card-v2 col-3@md">
         <figure>
-          <img src="../../assets/img/team-img-5.jpg" alt="photo of Emily Ewing">
+          <img src="../../assets/img/team-img-5.jpg" alt="photo of James Powell">
           <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
           </figcaption>
         </figure>
       </div>
 
       <div class="card-v2 col-3@md">
         <figure>
-          <img src="../../assets/img/team-img-5.jpg" alt="photo of Mathew Burford">
+          <img src="../../assets/img/team-img-5.jpg" alt="photo of James Powell">
           <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Mathew Burford</div>
-            <div class="card-v2__label">SVP of marketing</div>
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
           </figcaption>
         </figure>
       </div>
 
       <div class="card-v2 col-3@md">
         <figure>
-          <img src="../../assets/img/team-img-5.jpg" alt="photo of Emily Ewing">
+          <img src="../../assets/img/team-img-5.jpg" alt="photo of James Powell">
           <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
           </figcaption>
         </figure>
       </div>
 
       <div class="card-v2 col-3@md">
         <figure>
-          <img src="../../assets/img/team-img-5.jpg" alt="photo of Olivia Gribben">
+          <img src="../../assets/img/team-img-5.jpg" alt="photo of James Powell">
           <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Olivia Gribben</div>
-            <div class="card-v2__label">CEO</div>
+            <div class="card-v2__title">James Powell</div>
+            <div class="card-v2__label">Designer</div>
           </figcaption>
         </figure>
       </div>
