--- a/main/upload.html
+++ b/main/upload.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <script>
     if('CSS' in window && CSS.supports('color', 'var(--color-var)')) {
@@ -16,9 +17,7 @@
   </noscript>
   <title>Title</title>
 </head><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-
-<body>
-  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav hide-nav js-hide-nav js-hide-nav--main">
+<header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav hide-nav js-hide-nav js-hide-nav--main">
     <div class="mega-nav__container">
       <!-- 👇 logo -->
       <a href="#0" class="mega-nav__logo">
@@ -159,7 +158,7 @@
   
                   <ul class="dropdown__menu" aria-label="submenu">
                     <li><a href="#0" class="dropdown__item">Profile</a></li>
-                    <li><a href="upload.html" class="dropdown__item">Upload</a></li>
+                    <li><a href="#0" class="dropdown__item">Upload</a></li>
                     <li><a href="#0" class="dropdown__item">Scrape</a></li>
                     <li class="dropdown__separator" role="separator"></li>
                     <li><a href="#0" class="dropdown__item">Account Settings</a></li>
@@ -205,84 +204,105 @@
       </div>
     </div>
   </header>
+<body>
+
+	<form class="cd-form floating-labels">
+		<fieldset>
+			<legend>Account Info</legend>
+
+			<div class="error-message">
+				<p>Please enter a valid email address</p>
+			</div>
+
+			<div class="icon">
+				<label class="cd-label" for="cd-name">Name</label>
+				<input class="user" type="text" name="cd-name" id="cd-name" required>
+		    </div> 
+
+		    <div class="icon">
+		    	<label class="cd-label" for="cd-company">Company</label>
+				<input class="company" type="text" name="cd-company" id="cd-company">
+		    </div> 
+
+		    <div class="icon">
+		    	<label class="cd-label" for="cd-email">Email</label>
+				<input class="email error" type="email" name="cd-email" id="cd-email" required>
+		    </div>
+		</fieldset>
+
+		<fieldset>
+			<legend>Project Info</legend>
+
+			<div>
+				<h4>Budget</h4>
+
+				<p class="cd-select icon">
+					<select class="budget">
+						<option value="0">Select Budget</option>
+						<option value="1">&lt; $5000</option>
+						<option value="2">$5000 - $10000</option>
+						<option value="3">&gt; $10000</option>
+					</select>
+				</p>
+			</div> 
+
+			<div>
+				<h4>Project type</h4>
+
+				<ul class="cd-form-list">
+					<li>
+						<input type="radio" name="radio-button" id="cd-radio-1" checked>
+						<label for="cd-radio-1">Choice 1</label>
+					</li>
+						
+					<li>
+						<input type="radio" name="radio-button" id="cd-radio-2">
+						<label for="cd-radio-2">Choice 2</label>
+					</li>
+
+					<li>
+						<input type="radio" name="radio-button" id="cd-radio-3">
+						<label for="cd-radio-3">Choice 3</label>
+					</li>
+				</ul>
+			</div>
+
+			<div>
+				<h4>Features</h4>
+
+				<ul class="cd-form-list">
+					<li>
+						<input type="checkbox" id="cd-checkbox-1">
+						<label for="cd-checkbox-1">Option 1</label>
+					</li>
+
+					<li>
+						<input type="checkbox" id="cd-checkbox-2">
+						<label for="cd-checkbox-2">Option 2</label>
+					</li>
+
+					<li>
+						<input type="checkbox" id="cd-checkbox-3">
+						<label for="cd-checkbox-3">Option 3</label>
+					</li>
+				</ul>
+			</div>
+
+			<div class="icon">
+				<label class="cd-label" for="cd-textarea">Project description</label>
+      			<textarea class="message" name="cd-textarea" id="cd-textarea" required></textarea>
+			</div>
+
+			<div>
+		      	<input type="submit" value="Send Message">
+		    </div>
+		</fieldset>
+	</form>
+<script src="js/jquery-2.1.1.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 
 </body>
-<div class="container-justified-gal">
-  <div class="flexbin flexbin-margin">
-    <a href="#">
-      <img src="../../assets/img/team-img-1.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-2.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-3.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-4.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-5.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-6.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-7.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-8.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-9.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-10.jpg" />
-    </a>
-    <a href="#">
-      <img src="../../assets/img/team-img-11.jpg" />
-    </a>
-  </div>
-</div>
-<footer class="footer-v4 padding-y-lg">
-  <div class="container max-width-lg">
-    <nav class="footer-v4__nav">
-      <ul class="footer-v4__nav-list">
-        <li class="footer-v4__nav-item"><a href="#0">Pricing</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Teams</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Updates</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Features</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Integrations</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Support</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Documentation</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Company</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Customers</a></li>
-        <li class="footer-v4__nav-item"><a href="#0">Our story</a></li>
-      </ul>
-    </nav>
 
-    <div class="footer-v4__logo">
-      <a href="#0">
-        <svg width="104" height="30" viewBox="0 0 104 30"><title>Go to homepage</title><path d="M37.54 24.08V3.72h4.92v16.37h8.47v4zM60.47 24.37a7.82 7.82 0 01-5.73-2.25 8.36 8.36 0 01-2-5.62 8.32 8.32 0 012.08-5.71 8 8 0 015.64-2.18 8.07 8.07 0 015.68 2.2 8.49 8.49 0 012 5.69 8.63 8.63 0 01-1.78 5.38 7.6 7.6 0 01-5.89 2.49zm0-3.67c2.42 0 2.73-3 2.73-4.23s-.31-4.26-2.73-4.26-2.79 3-2.79 4.26.32 4.23 2.82 4.23zM95.49 24.37a7.82 7.82 0 01-5.73-2.25 8.36 8.36 0 01-2-5.62 8.32 8.32 0 012.08-5.71 8.4 8.4 0 0111.31 0 8.43 8.43 0 012 5.69 8.6 8.6 0 01-1.77 5.38 7.6 7.6 0 01-5.89 2.51zm0-3.67c2.42 0 2.73-3 2.73-4.23s-.31-4.26-2.73-4.26-2.8 3-2.8 4.26.31 4.23 2.83 4.23zM77.66 30c-5.74 0-7-3.25-7.23-4.52l4.6-.26c.41.91 1.17 1.41 2.76 1.41a2.45 2.45 0 002.82-2.53v-2.68a7 7 0 01-1.7 1.75 6.12 6.12 0 01-5.85-.08c-2.41-1.37-3-4.25-3-6.66 0-.89.12-3.67 1.45-5.42a5.67 5.67 0 014.64-2.4c1.2 0 3 .25 4.46 2.82V8.81h4.85v15.33a5.2 5.2 0 01-2.12 4.32A9.92 9.92 0 0177.66 30zm.15-9.66c2.53 0 2.81-2.69 2.81-3.91s-.31-4-2.81-4-2.81 2.8-2.81 4 .27 3.91 2.81 3.91zM55.56 3.72h9.81v2.41h-9.81z" fill="var(--color-contrast-higher)"/><circle cx="15" cy="15" r="15" fill="var(--color-primary)"/></svg>
-      </a>
-    </div>
-
-    <p class="footer-v4__print">&copy; Copyright. All rights reserved.</p>
-
-    <div class="footer-v4__socials">
-      <a href="#0">
-        <svg class="icon" viewBox="0 0 16 16"><title>Follow us on Twitter</title><g><path d="M16,3c-0.6,0.3-1.2,0.4-1.9,0.5c0.7-0.4,1.2-1,1.4-1.8c-0.6,0.4-1.3,0.6-2.1,0.8c-0.6-0.6-1.5-1-2.4-1 C9.3,1.5,7.8,3,7.8,4.8c0,0.3,0,0.5,0.1,0.7C5.2,5.4,2.7,4.1,1.1,2.1c-0.3,0.5-0.4,1-0.4,1.7c0,1.1,0.6,2.1,1.5,2.7 c-0.5,0-1-0.2-1.5-0.4c0,0,0,0,0,0c0,1.6,1.1,2.9,2.6,3.2C3,9.4,2.7,9.4,2.4,9.4c-0.2,0-0.4,0-0.6-0.1c0.4,1.3,1.6,2.3,3.1,2.3 c-1.1,0.9-2.5,1.4-4.1,1.4c-0.3,0-0.5,0-0.8,0c1.5,0.9,3.2,1.5,5,1.5c6,0,9.3-5,9.3-9.3c0-0.1,0-0.3,0-0.4C15,4.3,15.6,3.7,16,3z"></path></g></svg>
-      </a>
-
-      <a href="#0">
-        <svg class="icon" viewBox="0 0 16 16"><title>Follow us on Youtube</title><g><path d="M15.8,4.8c-0.2-1.3-0.8-2.2-2.2-2.4C11.4,2,8,2,8,2S4.6,2,2.4,2.4C1,2.6,0.3,3.5,0.2,4.8C0,6.1,0,8,0,8 s0,1.9,0.2,3.2c0.2,1.3,0.8,2.2,2.2,2.4C4.6,14,8,14,8,14s3.4,0,5.6-0.4c1.4-0.3,2-1.1,2.2-2.4C16,9.9,16,8,16,8S16,6.1,15.8,4.8z M6,11V5l5,3L6,11z"></path></g></svg>
-      </a>
-
-      <a href="#0">
-        <svg class="icon" viewBox="0 0 16 16"><title>Follow us on Github</title><g><path  d="M8,0.2c-4.4,0-8,3.6-8,8c0,3.5,2.3,6.5,5.5,7.6 C5.9,15.9,6,15.6,6,15.4c0-0.2,0-0.7,0-1.4C3.8,14.5,3.3,13,3.3,13c-0.4-0.9-0.9-1.2-0.9-1.2c-0.7-0.5,0.1-0.5,0.1-0.5 c0.8,0.1,1.2,0.8,1.2,0.8C4.4,13.4,5.6,13,6,12.8c0.1-0.5,0.3-0.9,0.5-1.1c-1.8-0.2-3.6-0.9-3.6-4c0-0.9,0.3-1.6,0.8-2.1 c-0.1-0.2-0.4-1,0.1-2.1c0,0,0.7-0.2,2.2,0.8c0.6-0.2,1.3-0.3,2-0.3c0.7,0,1.4,0.1,2,0.3c1.5-1,2.2-0.8,2.2-0.8 c0.4,1.1,0.2,1.9,0.1,2.1c0.5,0.6,0.8,1.3,0.8,2.1c0,3.1-1.9,3.7-3.7,3.9C9.7,12,10,12.5,10,13.2c0,1.1,0,1.9,0,2.2 c0,0.2,0.1,0.5,0.6,0.4c3.2-1.1,5.5-4.1,5.5-7.6C16,3.8,12.4,0.2,8,0.2z"></path></g></svg>
-      </a>
-    </div>
-  </div>
-  <script src="assets/js/scripts.js"></script>
 </footer>
+<script src="assets/js/scripts.js"></script>
 </html>
