Fix grid to 2 column

--- a/main/index.html
+++ b/main/index.html
@@ -183,6 +183,9 @@
             <li class="mega-nav__item">
               <a href="register.html" class="btn btn--primary mega-nav__btn">Register</a>
             </li>
+            <li class="mega-nav__item">
+              <a href="register.html" class="btn btn--subtle mega-nav__btn">Login</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -210,37 +213,37 @@
 <div class="container-justified-gal">
   <div class="flexbin flexbin-margin">
     <a href="#">
-      <img src="../../assets/img/team-img-1.jpg" />
+      <img src="../../assets/img/team-img-1.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-2.jpg" />
+      <img src="../../assets/img/team-img-2.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-3.jpg" />
+      <img src="../../assets/img/team-img-3.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-4.jpg" />
+      <img src="../../assets/img/team-img-4.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-5.jpg" />
+      <img src="../../assets/img/team-img-5.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-6.jpg" />
+      <img src="../../assets/img/team-img-6.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-7.jpg" />
+      <img src="../../assets/img/team-img-7.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-8.jpg" />
+      <img src="../../assets/img/team-img-8.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-9.jpg" />
+      <img src="../../assets/img/team-img-9.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-10.jpg" />
+      <img src="../../assets/img/team-img-10.jpg" class="card-v2"/>
     </a>
     <a href="#">
-      <img src="../../assets/img/team-img-11.jpg" />
+      <img src="../../assets/img/team-img-11.jpg" class="card-v2"/>
     </a>
   </div>
 </div>
