--- a/main/mangas.html
+++ b/main/mangas.html
@@ -212,90 +212,31 @@
 <script src="assets/js/scripts.js"></script>
 </body>
 
-<section class="listing-main">
+<section class="margin-top-md">
   <div class="container max-width-adaptive-lg">
-    <div class="grid gap-md">
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-1.jpg" alt="photo of James Powell">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">James Powell</div>
-            <div class="card-v2__label">Designer</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-3.jpg" alt="photo of Mathew Burford">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Mathew Burford</div>
-            <div class="card-v2__label">SVP of marketing</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-2.jpg" alt="photo of Emily Ewing">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Emily Ewing</div>
-            <div class="card-v2__label">Developer</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-3.jpg" alt="photo of Mathew Burford">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Mathew Burford</div>
-            <div class="card-v2__label">SVP of marketing</div>
-          </figcaption>
-        </figure>
-      </div>
-
-      <div class="card-v2 col-3@md">
-        <figure>
-          <img src="../../assets/img/team-img-4.jpg" alt="photo of Olivia Gribben">
-          <figcaption class="card-v2__caption text-center">
-            <div class="card-v2__title">Olivia Gribben</div>
-            <div class="card-v2__label">CEO</div>
-          </figcaption>
-        </figure>
-      </div>
-    </div>
-  </div>
+<ul class="grid-auto-md gap-md">
+  <li><img class="card-v2" src="../../assets/img/team-img-1.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-2.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-3.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-4.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-5.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-6.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-7.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-8.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-9.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-10.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-1.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-2.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-3.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-4.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-5.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-6.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-7.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-8.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-9.jpg" alt="placeholder"></li>
+  <li><img class="card-v2" src="../../assets/img/team-img-10.jpg" alt="placeholder"></li>
+</ul>
+</div>
 </section>
 
 </html>
