--- a/main/mangas.html
+++ b/main/mangas.html
@@ -18,7 +18,7 @@
 </head><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
 <body>
-  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav">
+  <header class="mega-nav mega-nav--mobile mega-nav--desktop@md position-relative js-mega-nav hide-nav js-hide-nav js-hide-nav--main">
     <div class="mega-nav__container">
       <!-- 👇 logo -->
       <a href="#0" class="mega-nav__logo">
